# EAS2Text-Rust

./: Cargo.toml  README.md
crates/eas2text/: Cargo.toml
crates/eas2text-lib/: Cargo.toml
crates/eas2text-lib/src/: decoder.rs  lib.rs
crates/eas2text/src/: main.rs
